--- a/demo-load-testing-zuul/src/main/resources/application.yml
+++ b/demo-load-testing-zuul/src/main/resources/application.yml
@@ -9,7 +9,7 @@ server:
 eureka:
   instance:
     preferIpAddress: true
-    instanceId: ${spring.cloud.client.ipAddress}:${server.port}
+    instanceId: ${spring.cloud.client.ip-address}:${server.port}
   client:
     serviceUrl:
       defaultZone: http://localhost:9000/eureka/
