--- a/demo-load-testing-app2/src/main/resources/application.yml
+++ b/demo-load-testing-app2/src/main/resources/application.yml
@@ -10,7 +10,7 @@ debug: true
 eureka:
   instance:
     preferIpAddress: true
-    instanceId: ${spring.cloud.client.ipAddress}:${server.port}
+    instanceId: ${spring.cloud.client.ip-address}:${server.port}
   client:
     serviceUrl:
       defaultZone: http://localhost:9000/eureka/
