--- a/demo-load-testing-app2/pom.xml
+++ b/demo-load-testing-app2/pom.xml
@@ -39,6 +39,16 @@
 			<groupId>com.example</groupId>
 			<artifactId>demo-load-testing-security-config</artifactId>
 		</dependency>
+
+		<!-- Swagger -->
+		<dependency>
+			<groupId>io.springfox</groupId>
+			<artifactId>springfox-swagger2</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>io.springfox</groupId>
+			<artifactId>springfox-swagger-ui</artifactId>
+		</dependency>
 	</dependencies>
 
 	<dependencyManagement>
