--- a/pom.xml
+++ b/pom.xml
@@ -32,6 +32,7 @@
 		<maven.compiler.target>1.8</maven.compiler.target>
 		<jwt.version>0.9.0</jwt.version>
 		<guava.version>23.0</guava.version>
+		<swagger.version>2.9.2</swagger.version>
 	</properties>
 
 	<dependencyManagement>
@@ -52,6 +53,17 @@
 				<groupId>com.google.guava</groupId>
 				<artifactId>guava</artifactId>
 				<version>${guava.version}</version>
+			</dependency>
+			<!-- swagger -->
+			<dependency>
+				<groupId>io.springfox</groupId>
+				<artifactId>springfox-swagger2</artifactId>
+				<version>${swagger.version}</version>
+			</dependency>
+			<dependency>
+				<groupId>io.springfox</groupId>
+				<artifactId>springfox-swagger-ui</artifactId>
+				<version>${swagger.version}</version>
 			</dependency>
 		</dependencies>
 	</dependencyManagement>
